--- a/tables.html
+++ b/tables.html
@@ -10,27 +10,44 @@
             text-align: center;
             font-family: sans-serif , cursive;
             background-color: white;
+            border-collapse: collapse;
         }
-        table{
+        table#t01{
             background-color: #cfa;
+            width: 65%;
+            margin: auto;
         }
+
+        table#t01 tr:nth-child(even) {
+            background-color: #eee;
+        }
+        table#t01 tr:nth-child(odd) {
+            background-color: #fff;
+        }
+        table#t01 th {
+            color: white;
+            background-color: black;
+        }
+
     </style>
 </head>
 <body>
-    <table style="width: 65%;">
+    <table id="t01">
         <tr>
-            <th>name</th>
-            <th>phone number</th>
+            <th >name</th>
+            <th colspan="2">phone number</th>
             <th>job</th>
         </tr>
         <tr>
             <td style="background-color: lightgray">alireza</td>
             <td style="background-color: lightgray">09117158746</td>
+            <td style="background-color: lightgray">09117232343</td>
             <td style="background-color: lightgray">software developer</td>
         </tr>
         <tr>
             <td>mohsen</td>
             <td>09356925879</td>
+            <td>09333333879</td>
             <td>web developer</td>
         </tr>
     </table>
